Avoid linebreaks inside inline code

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,3 +7,7 @@
     max-width: 90vw;
     height: auto;
 }
+
+code:not([data-lang]) {
+    white-space: nowrap;
+}
